--- a/app/view5/view5.html
+++ b/app/view5/view5.html
@@ -24,9 +24,9 @@
           </ul>
       <div class="location">
         <ul>
-          <li><a href="#"><img src="Social Media Icons/PNG/Circle Grey/Facebook.png" style="width: 50%" alt="fb"></a></li>
-          <li><a href="#"><img src="Social Media Icons/PNG/Circle Grey/Twitter.png" style="width: 50%" alt="tw"></a></li>
-          <li><a href="#"><img src="Social Media Icons/PNG/Circle Grey/Instagram.png" style="width: 50%" alt="ig"></a></li>
+          <li><a href="https://www.facebook.com/Empire-Business-Credit-Solutions-116825502339500/"><img src="Social Media Icons/PNG/Circle Grey/Facebook.png" style="width: 50%" alt="fb"></a></li>
+          <li><a href="https://twitter.com/numberonecareer"><img src="Social Media Icons/PNG/Circle Grey/Twitter.png" style="width: 50%" alt="tw"></a></li>
+          <li><a href="https://www.instagram.com/numberonecareertraining/"><img src="Social Media Icons/PNG/Circle Grey/Instagram.png" style="width: 50%" alt="ig"></a></li>
         </ul>
       </div>
     </div>
