--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -22,9 +22,9 @@
       </ul>
       <div class="location">
           <ul>
-            <li><a href="#"><img src="Social Media Icons/PNG/Circle Grey/Facebook.png" style="width: 50%" alt="fb"></a></li>
-            <li><a href="#"><img src="Social Media Icons/PNG/Circle Grey/Twitter.png" style="width: 50%" alt="tw"></a></li>
-            <li><a href="#"><img src="Social Media Icons/PNG/Circle Grey/Instagram.png" style="width: 50%" alt="ig"></a></li>
+            <li><a href="https://www.facebook.com/Empire-Business-Credit-Solutions-116825502339500/"><img src="Social Media Icons/PNG/Circle Grey/Facebook.png" style="width: 50%" alt="fb"></a></li>
+            <li><a href="https://twitter.com/numberonecareer"><img src="Social Media Icons/PNG/Circle Grey/Twitter.png" style="width: 50%" alt="tw"></a></li>
+            <li><a href="https://www.instagram.com/numberonecareertraining/"><img src="Social Media Icons/PNG/Circle Grey/Instagram.png" style="width: 50%" alt="ig"></a></li>
           </ul>
       </div>
     </div>
@@ -35,7 +35,7 @@
           class="form-horizontal contact"
           method="post"
           target="_blank"
-          action="https://script.google.com/macros/s/AKfycbzqls6m3qw97AGPfBSsMhpI1r-9flC1uJjuyG-oXx9EL0_rd82I/exec"> 
+          action="https://script.google.com/macros/s/AKfycbzqls6m3qw97AGPfBSsMhpI1r-9flC1uJjuyG-oXx9EL0_rd82I/exec">
 
          <div class="form-group">
            <div class="col-xs-12">
