--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -19,25 +19,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand logo" href="#">Empire Business Credit Solutions</a>
+      <a class="navbar-brand logo" href="#!/view1"><img src="img/empireLogo.png" style="width: 20%;" alt="Empire Business Credit Solutions"></a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="#!/view1">Home</a></li>
         <li><a href="#!/view2">Credit Repair</a></li>
-        <li><a href="#!/view3">Debt Forgiveness</a></li>
+        <li><a href="#!/view3">Get Financing</a></li>
         <li><a href="#!/view4">Business Development</a></li>
         <li><a href="#!/view5">Contact Us</a></li>
+        <li><a href="https://www.facebook.com/Empire-Business-Credit-Solutions-116825502339500/"><img src="Social Media Icons/PNG/Square Color/Facebook.png" style="width: 15%" alt="fb"></a></li>
+        <li><a href="https://twitter.com/numberonecareer"><img src="Social Media Icons/PNG/Circle Color/Twitter.png" style="width: 15%" alt="tw"></a></li>
+        <li><a href="https://www.instagram.com/numberonecareertraining/"><img src="Social Media Icons/PNG/Square Color/Instagram.png" style="width: 15%" alt="ig"></a></li>
       </ul>
     </div>
-    <div class="location">
-        <ul>
-          <li><a href="https://www.facebook.com/Empire-Business-Credit-Solutions-116825502339500/"><img src="Social Media Icons/PNG/Circle Grey/Facebook.png" style="width: 25%" alt="fb"></a></li>
-          <li><a href="https://twitter.com/numberonecareer"><img src="Social Media Icons/PNG/Circle Grey/Twitter.png" style="width: 25%" alt="tw"></a></li>
-          <li><a href="https://www.instagram.com/numberonecareertraining/"><img src="Social Media Icons/PNG/Circle Grey/Instagram.png" style="width: 25%" alt="ig"></a></li>
-        </ul>
-    </div>
-    <h4 class="tagline">Call 1-866-505-3040 to begin the path toward better credit!</h4>
+  </div>
   </div>
 </nav>
 
@@ -45,7 +41,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
