--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,11 +1,11 @@
-  <div class="row">
-    <h2 class="text-center"><strong>700+ Credit Score in 45 Days or Less</strong></h2>
+  <div class="row text-center">
+    <h2><strong>700+ Credit Score in 45 Days or Less</strong></h2>
   </div>
   <div class="row">
     <div class="col-sm-7">
 
-      <div class="row">
-        <img src="img/credit.jpeg" style="width: 70%"alt="">
+      <div class="row container-fluid">
+        <img src="img/creditCompare.png" style="width: 100%"alt="">
       </div>
 
       <h3>Individualized Plan to Restore Your Credit</h3>
