--- a/app/view3/view3.html
+++ b/app/view3/view3.html
@@ -1,18 +1,15 @@
-  <div class="row">
-    <h2 class="text-center"><strong>Reduce Your Debt to Income Ratio</strong></h2>
+  <div class="row text-center">
+    <h2><strong>Better Financing Options</strong></h2>
   </div>
   <div class="row">
     <div class="col-sm-7">
       <div class="row">
-        <img src="img/moneyFlowers.jpeg" style="width: 70%"alt="">
+        <img src="img/fundingLoans.jpg" style="width: 70%"alt="">
       </div>
 
-      <h3>Say Goodbye To Debt Collectors</h3>
+      <h3>Get New Credit Cards, New Vehicles, & Mortgages</h3>
       <p>
-        Empire Business Credit Solutions has successfully negotiated on behalf of many credit
-        obligators, just like you, to get the creditor to reduce or completely forgive an owed
-        debt. This is not bankruptcy! You will be relieved of debt without a penalty to your
-        credit report.
+
       </p>
       <h3>Reduce Your Credit Risk Rating With:</h3>
         <ul class="list">
