--- a/app/view4/view4.html
+++ b/app/view4/view4.html
@@ -1,12 +1,11 @@
-
-  <div class="row">
-    <h2 class="text-center"><strong>Get Funding for Your Business</strong></h2>
+  <div class="row text-center">
+    <h2><strong>Get Funding for Your Business</strong></h2>
   </div>
   <div class="row">
     <div class="col-sm-7">
 
       <div class="row">
-        <img src="img/smallBusiness.jpeg" style="width: 70%"alt="">
+        <img src="img/minorityBusiness.jpg" style="width: 70%"alt="">
       </div>
 
       <h3>We Are Invested In Your Success</h3>
