--- a/app/view5/view5.html
+++ b/app/view5/view5.html
@@ -1,12 +1,30 @@
 
-  <div class="row">
-    <h2 class="text-center"><strong>Don't Let Your Credit Keep You From Living The Life You Deserve</strong></h2>
+  <div class="row text-center">
+    <h2><strong>"Your Success is Our Success in Helping Build Your Empire"</strong></h2>
   </div>
   <div class="row">
     <div class="col-sm-7">
+      <div class="row">
+        <img src="img/approved.png" style="width: 50%"alt="">
+        <ul class="approved">
+          <li>New Vehicles</li>
+          <li>Credit Cards</li>
+          <li>Mortgages</li>
+          <li>Business Loans</li>
+          <li>Business Lines of Credit</li>
+        </ul>
+      </div>
+
       <h3>Contact Empire Business Credit Solutions</h3>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.403689660446!2d-83.20051034914887!3d42.440426137913136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824c971c9c9a965%3A0xb2592d1b7b445462!2s20111+James+Couzens+Fwy+%23300%2C+Detroit%2C+MI+48235!5e0!3m2!1sen!2sus!4v1505911543409"
-        width="500" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <p>
+        Let us help you get funding for your business. Here's How You Can Get Approved for Up to $50,000!
+      </p>
+      <ul>
+        <li>Minimum 525 personal credit score</li>
+        <li>Bankruptcies must be discharged for at least one year</li>
+        <li>Cannot be 60 days late on IRS debt, student loans or child support</li>
+        <li>Must be at your job for 6 months or in business for 6 months</li>
+      </ul>
       <h4><a href="mailto:renee@empirebusinesscreditsolutions.com">Send Us An Email</a></h4>
         <h4>Call Us To Schedule An Appointment:</h4>
           <ul>
