--- a/index.html
+++ b/index.html
@@ -97,9 +97,33 @@
             <li>Affect the price you pay for automobile and homeowners insurance</li>
             <li>Decrease the ability to get credit cards</li>
           </ul>
-          <p>At Empire Business Credit
-          Solutions, we have a system designed to remove negative and inaccurate items from your credit report.
-          Let us help you improve your credit score, get better interest rates, and a stronger credit profile.
+          <p>At Empire Business Credit Solutions, we have a system designed to remove negative and inaccurate
+            items from your credit report, such as:
+            <div class="row">
+              <div class="col-sm-4">
+                <ul>
+                  <li>Foreclosures</li>
+                  <li>Student Loans</li>
+                  <li>Late Payments</li>
+                  <li>Bankruptcies</li>
+                </ul>
+              </div>
+              <div class="col-sm-4">
+                <ul>
+                  <li>Collections</li>
+                  <li>Judgements</li>
+                  <li>Repossessions</li>
+                  <li>Tax Liens</li>
+                </ul>
+              </div>
+              <div class="col-sm-4">
+                <li>Charge-Offs</li>
+                <li>Public Records</li>
+                <li>Short Sales</li>
+                <li>Medical Bills</li>
+              </div>
+            </div>
+            Let us help you improve your credit score, get better interest rates, and a stronger credit profile.
         </p>
         <p>
           More than one-time credit repair, we help you build a healthier credit profile.  The focus is on your
