--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,9 @@
             <h4>Call Us To Schedule An Appointment:</h4>
               <ul>
                 <li>Office:</li>
-                  <span>1-866-505-3040</span>
+                  <span><strong>1-866-505-3040</strong></span>
                 <li>Fax:</li>
-                  <span>1-866-475-4913</span>
+                  <span><strong>1-866-475-4913</strong></span>
               </ul>
         </div>
         <div class="col-sm-5">
