--- a/reviews.html
+++ b/reviews.html
@@ -47,42 +47,72 @@
     <div class="row">
 
       <div class="col-sm-7">
-        <div class="card">
+        <div class="card review">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.""</p>
-              <footer>Someone famous - <cite title="Source Title">Source Title</cite></footer>
+              <p>"I am very satisfied with my results after working with Empire Business Credit Solutions.  All of my tax liens were removed,
+                and over 100 inquiries were removed from my credit report.  My credit score has increased over 200 points in 90 days."</p>
+              <footer>Marcus ~ <cite title="Source Title">Detroit, MI</cite></footer>
             </blockquote>
           </div>
         </div>
 
-        <div class="card">
+          <div class="card review">
+            <div class="card-block">
+              <blockquote class="card-blockquote">
+                <img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
+                <p>"As a small business owner, getting financing is a challenge; even more so with a low credit score.  My credit counselor worked
+                   with me to create a plan to lower my credit risk rating with the credit bureaus.  60 days later I have secured lines of business credit,
+                    recieved significant funding for my business, and gained career freedom!"</p>
+                <footer>Lisa ~ <cite title="Source Title">Detroit, MI</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+
+        <div class="card review">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer>Someone famous - <cite title="Source Title">Source Title</cite></footer>
+              <p>"My experience with Empire Business Credit Solutions was very professional.  They informed me how to improve my credit.
+                 They assisted me in getting the home which was in foreclosure, singed over to me by the bank.  Empire Business Credit Solutions
+                 also removed the foreclosure and reposession form my credit report.  I now have a 800 credit score."</p>
+              <footer>Chris ~ <cite title="Source Title">Southfield, MI</cite></footer>
             </blockquote>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card review">
           <div class="card-block">
             <blockquote class="card-blockquote">
-              <img class="star" src="img/star.png"><img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer>Someone famous - <cite title="Source Title">Source Title</cite></footer>
+              <img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
+              <p>"My company had a rough period with more expenses than profit.  My credit rating was horrible, I was having trouble paying employees, and
+                 I needed help.  Empire Business Credit Solutions worked with my creditors to help me rebuild my credit and reduce my debt.  Now I can focus on
+                 growing my business.  I know this would not have happened without Empire Business Credit Solutions."</p>
+              <footer>Lynnette ~ <cite title="Source Title">Taylor, MI</cite></footer>
             </blockquote>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card review">
           <div class="card-block">
             <blockquote class="card-blockquote">
               <img class="star" src="img/star.png"><img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer>Someone famous - <cite title="Source Title">Source Title</cite></footer>
+              <p>"I had great success with Empire Business Credit Solutions!  2 months ago, my credit counselor advised me not to finance a vehicle
+                 at the 18% interest rate the finance company offered.  Even though it meant a few more weeks of public transportation and rideshare,
+                 my credit score is now 700 and I just purchased a 2017 SUV with a 3% interest rate."</p>
+              <footer>Jaime ~ <cite title="Source Title">Livonia, MI</cite></footer>
+            </blockquote>
+          </div>
+        </div>
+
+        <div class="card review">
+          <div class="card-block">
+            <blockquote class="card-blockquote">
+              <img class="star" src="img/star.png"><img class="star" src="img/star.png" alt=""><img class="star" src="img/star.png"><img class="star" src="img/star.png"><img class="star" src="img/star.png">
+              <p>"By providing tools to raise my score, Empire Business Credit Solutions increased my score from 550 to 750 in less than
+                 90 days.  Together we created a plan to purchase my new home, and successfully negotiated a low interest rate for my mortgage."</p>
+              <footer>Renee - <cite title="Source Title">Farmington, MI</cite></footer>
             </blockquote>
           </div>
         </div>
